--- a/css/style.css
+++ b/css/style.css
@@ -240,3 +240,21 @@ footer a{
 .ui-datepicker-month,.ui-datepicker-year{
     color: #000000;
 }
+.jqxgrid_input{
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    color: #555;
+    display: block;
+    font-size: 14px;
+    height: 100%;
+    line-height: 1.42857;
+    padding: 0px 12px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    width: 100%;
+}
+.integer_type_positive,.float_type_positive,.float_type_all,.integer_type_all{
+    text-align: right;
+}
