--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,8 @@ footer a{
     color: white;
     background-color: #8A2BE2;
     padding: 10px;
+    border: 5px solid #000000;
+    border-radius: 10px;
 }
 /*navbar*/
 .navbar-nav > li {
